[gd_scene load_steps=19 format=3 uid="uid://tvjdkkmvqicf"]

[ext_resource type="PackedScene" uid="uid://bc7msraepqfum" path="res://effects/stage_background.tscn" id="1_gnsxt"]
[ext_resource type="Script" path="res://StageSelector/stage_selector.gd" id="1_v5awr"]
[ext_resource type="Texture2D" uid="uid://bp4dcr6kyejc5" path="res://Level Selector-20241027T133937Z-001/Level Selector/Rat.png" id="2_ddp1k"]
[ext_resource type="Script" path="res://StageSelector/rat_stage.gd" id="3_aevlt"]
[ext_resource type="Texture2D" uid="uid://ca60oabhns652" path="res://Level Selector-20241027T133937Z-001/Level Selector/Snake.png" id="3_njj4l"]
[ext_resource type="Texture2D" uid="uid://dchr3tbhyo71v" path="res://Level Selector-20241027T133937Z-001/Level Selector/Cloud.png" id="4_24oj6"]
[ext_resource type="Texture2D" uid="uid://ksiw5cdoiack" path="res://Level Selector-20241027T133937Z-001/Level Selector/Bunny.png" id="5_df3j7"]
[ext_resource type="Texture2D" uid="uid://drjomxkhu83au" path="res://Level Selector-20241027T133937Z-001/Level Selector/StarBlank.png" id="5_rvioi"]
[ext_resource type="Texture2D" uid="uid://bnjksj4amlsma" path="res://Level Selector-20241027T133937Z-001/Level Selector/Dragon.png" id="6_6stv2"]
[ext_resource type="Texture2D" uid="uid://jbuoj2515o4k" path="res://Level Selector-20241027T133937Z-001/Level Selector/Star1.png" id="6_doynh"]
[ext_resource type="Texture2D" uid="uid://bepush3wak1ir" path="res://Level Selector-20241027T133937Z-001/Level Selector/Star2.png" id="7_b7xhd"]
[ext_resource type="Texture2D" uid="uid://cj6xla6yye8fr" path="res://Level Selector-20241027T133937Z-001/Level Selector/Star3.png" id="8_0cnp4"]
[ext_resource type="Script" path="res://StageSelector/dragon_stage.gd" id="11_2l650"]
[ext_resource type="Texture2D" uid="uid://bnki6533t8b3s" path="res://Level Selector-20241027T133937Z-001/Level Selector/Tiger.png" id="12_u06ea"]
[ext_resource type="Texture2D" uid="uid://dg7hwdeamq52w" path="res://Level Selector-20241027T133937Z-001/Level Selector/Cow.png" id="13_ocwbo"]
[ext_resource type="Script" path="res://StageSelector/rabbit_stage.gd" id="13_qqbsy"]
[ext_resource type="Script" path="res://StageSelector/tiger_stage.gd" id="15_4nmcx"]
[ext_resource type="Script" path="res://StageSelector/cow_stage.gd" id="17_1pr3f"]

[node name="StageSelector" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_v5awr")

[node name="level_select_background" parent="." instance=ExtResource("1_gnsxt")]

[node name="SnakeStage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 104.0
offset_top = 576.0
offset_right = 470.0
offset_bottom = 942.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_njj4l")
expand_mode = 1
script = ExtResource("3_aevlt")

[node name="BlankStar" type="TextureRect" parent="SnakeStage"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -340.0
offset_right = 233.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_rvioi")
expand_mode = 1

[node name="Star1" type="TextureRect" parent="SnakeStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_doynh")
expand_mode = 1

[node name="Star2" type="TextureRect" parent="SnakeStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -222.0
offset_right = 222.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_b7xhd")
expand_mode = 1

[node name="Star3" type="TextureRect" parent="SnakeStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -224.0
offset_right = 230.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_0cnp4")
expand_mode = 1

[node name="Fog1" type="TextureRect" parent="SnakeStage"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -229.0
offset_right = 229.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_24oj6")
expand_mode = 1

[node name="DragonStage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 288.0
offset_top = 169.0
offset_right = 654.0
offset_bottom = 535.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_6stv2")
expand_mode = 1
script = ExtResource("11_2l650")

[node name="BlankStar" type="TextureRect" parent="DragonStage"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -340.0
offset_right = 233.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_rvioi")
expand_mode = 1

[node name="Star1" type="TextureRect" parent="DragonStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_doynh")
expand_mode = 1

[node name="Star2" type="TextureRect" parent="DragonStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -222.0
offset_right = 222.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_b7xhd")
expand_mode = 1

[node name="Star3" type="TextureRect" parent="DragonStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -224.0
offset_right = 230.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_0cnp4")
expand_mode = 1

[node name="Fog1" type="TextureRect" parent="DragonStage"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -229.0
offset_right = 229.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_24oj6")
expand_mode = 1

[node name="RabbitStage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 768.0
offset_top = 37.0
offset_right = 1134.0
offset_bottom = 403.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_df3j7")
expand_mode = 1
script = ExtResource("13_qqbsy")

[node name="BlankStar" type="TextureRect" parent="RabbitStage"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -340.0
offset_right = 233.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_rvioi")
expand_mode = 1

[node name="Star1" type="TextureRect" parent="RabbitStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_doynh")
expand_mode = 1

[node name="Star2" type="TextureRect" parent="RabbitStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -222.0
offset_right = 222.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_b7xhd")
expand_mode = 1

[node name="Star3" type="TextureRect" parent="RabbitStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -224.0
offset_right = 230.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_0cnp4")
expand_mode = 1

[node name="Fog1" type="TextureRect" parent="RabbitStage"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -229.0
offset_right = 229.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_24oj6")
expand_mode = 1

[node name="TigerStage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1224.0
offset_top = 169.0
offset_right = 1590.0
offset_bottom = 535.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_u06ea")
expand_mode = 1
script = ExtResource("15_4nmcx")

[node name="BlankStar" type="TextureRect" parent="TigerStage"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -340.0
offset_right = 233.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_rvioi")
expand_mode = 1

[node name="Star1" type="TextureRect" parent="TigerStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_doynh")
expand_mode = 1

[node name="Star2" type="TextureRect" parent="TigerStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -222.0
offset_right = 222.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_b7xhd")
expand_mode = 1

[node name="Star3" type="TextureRect" parent="TigerStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -224.0
offset_right = 230.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_0cnp4")
expand_mode = 1

[node name="Fog1" type="TextureRect" parent="TigerStage"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -229.0
offset_right = 229.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_24oj6")
expand_mode = 1

[node name="CowStage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1448.0
offset_top = 576.0
offset_right = 1814.0
offset_bottom = 942.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_ocwbo")
expand_mode = 1
script = ExtResource("17_1pr3f")

[node name="BlankStar" type="TextureRect" parent="CowStage"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -340.0
offset_right = 233.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_rvioi")
expand_mode = 1

[node name="Star1" type="TextureRect" parent="CowStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_doynh")
expand_mode = 1

[node name="Star2" type="TextureRect" parent="CowStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -222.0
offset_right = 222.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_b7xhd")
expand_mode = 1

[node name="Star3" type="TextureRect" parent="CowStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -224.0
offset_right = 230.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_0cnp4")
expand_mode = 1

[node name="Fog1" type="TextureRect" parent="CowStage"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -229.0
offset_right = 229.0
offset_bottom = 229.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_24oj6")
expand_mode = 1

[node name="RatStage" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 664.0
offset_top = 446.0
offset_right = 1240.0
offset_bottom = 1022.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ddp1k")
expand_mode = 1
script = ExtResource("3_aevlt")

[node name="BlankStar" type="TextureRect" parent="RatStage"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -340.0
offset_right = 233.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_rvioi")
expand_mode = 1

[node name="Star1" type="TextureRect" parent="RatStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_doynh")
expand_mode = 1

[node name="Star2" type="TextureRect" parent="RatStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -222.0
offset_right = 222.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_b7xhd")
expand_mode = 1

[node name="Star3" type="TextureRect" parent="RatStage/BlankStar"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -224.0
offset_right = 230.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_0cnp4")
expand_mode = 1

[node name="Fog1" type="TextureRect" parent="RatStage"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -368.0
offset_right = 368.0
offset_bottom = 368.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_24oj6")
expand_mode = 1

[connection signal="mouse_entered" from="SnakeStage" to="SnakeStage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SnakeStage" to="SnakeStage" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="DragonStage" to="DragonStage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="DragonStage" to="DragonStage" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="RabbitStage" to="RabbitStage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="RabbitStage" to="RabbitStage" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="TigerStage" to="TigerStage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TigerStage" to="TigerStage" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CowStage" to="CowStage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CowStage" to="CowStage" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="RatStage" to="RatStage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="RatStage" to="RatStage" method="_on_mouse_exited"]
